[package]
name = "sdl1_2-rs"
version = "0.3.7"
authors = [
	"Brian Anderson <banderson@mozilla.com>",
	"Kang Seonghoon <public+rust@mearie.org>"
]

description = "SDL bindings"
homepage = "https://github.com/brson/rust-sdl"
repository = "https://github.com/brson/rust-sdl"
license = "MIT"

[lib]
name = "sdl"
path = "src/sdl/lib.rs"

[dependencies]
num = "0.1.24"
rand = "0.3"
libc = "0.1"
